          fields are correctly implemented. 

      - Added pytz to the repository. Stuart Bishop licensed it for us under
        ZPL 2.1. Thanks!

      - New schema field: Timedelta.

      - Implemented some initial deprecation framework, see
        `zope.deprecation`. It allows one to deprecate methods and properties
        in classes as well as any name in a module.

      - The browser:containerViews directive provides an optional layer
        attribute.

      - Groups for unauthenticated users, authenticated users, and
        everybody can now be defined in ZCML.

      - A handler attribute is now used in subscriber directives for
        event subscribers that don't create objects, which is the case
        for most subscribers.  Using the factory attribute without a
        provides attribute to register a handler is deprecated.

      - Added the function zope.component.adapts for declaring interfaces
        adapted by classes. This is similar to zope.interface.implements in
        that it puts a marker on the class that has a significant meaning in
        the component architecture machinery.

      - It is no longer necessary to supply a for attribute in adapter
        directives if the factory declares the interfaces or classes that it
        adapts using zope.component.adapts.

      - It is no longer necessary to specify a provides attribute in
        an adapter or utility directive if the factory/component
        implements/provides a single interface.

      - Added `zope.security.canAccess` and `zope.security.canWrite`
        convenience methods.  Often code wants to check if a certain option is
        open to a user before presenting it.  If the code relies on a certain
        permission, the Zope 3 goal of keeping knowledge of security
        assertions out of the code and only in configuration is broken.
        Instead, ask if the current intreaction canAccess or canWrite some