@@ -11,11 +11,6 @@ Features
 
 - Support for iterable sources
 
-- Allow adapters (including views) to be registered for classes
-  (really implementation specifications of classes) as well as
-  interfaces. This has been done for page directives but needs to be
-  done for other adapter directives.
-
 
 Miscellaneous
 -------------
